--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,45 @@
+## Android Studio / Gradle
+/.gradle
+/.idea/
 *.iml
-.gradle
+
+# Project local properties
 /local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
+
+# Gradle build output
+**/build/
+/build/
+
+# Android specific
+.externalNativeBuild/
+.cxx/
+/captures/
+
+# Generated files
+*.apk
+*.ap_ 
+*.apks
+*.aab
+
+# Keystore files (sensitive)
+*.jks
+*.keystore
+
+# IDEs
+.vscode/
+
+# OS
 .DS_Store
-/build
-/captures
-.externalNativeBuild
-.cxx
-local.properties
+Thumbs.db
+
+# Logs
+*.log
+
+# Environment
+.env
+.env.*
+
+# Ignore IntelliJ specific workspace files (personal)
+/.idea/workspace.xml
+/.idea/tasks.xml
+/.idea/dictionaries
